# ModuleTemplate

./: .clang-format  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  gitupdate.py
.github/workflows/: autobuild.yml  build-linux.yml  build-windows.yml
CMake/: CMakeLists.txt  Configure.cmake
Source/: CMakeLists.txt
Test/: CMakeLists.txt  Macro.h  Test1.cpp
